# R3LM

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: TEMPLATE.md  dataset_info.json  stage1_sft.yaml
r3lm/: __init__.py  build_rcc.py  generate_rationales.py  hf_assets.py  input_assembly.py  jaspar_metadata.py  motifs.py  rcc.py  train_stage2.py
scripts/: build_rcc.sh  generate_rationales.sh  run_stage1_sft.sh  run_stage2_reg.sh
